<!--
  ~ Copyright 2017 devjn
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">File Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="selected_count">%1$d selected</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="cancel">Cancel</string>

    <plurals name="delete_confirmation">
        <item quantity="one">Are you sure you want to delete %1$d item?</item>
        <item quantity="other">Are you sure you want to delete %1$d items?</item>
    </plurals>

    <plurals name="delete_content_confirmation">
        <item quantity="one">Are you sure you want to delete %1$d item?\n
    Contains: %2$d items</item>
        <item quantity="other">Are you sure you want to delete %1$d items?\n
    Contains: %2$d items</item>
    </plurals>


    <!--    Preferences    -->
    <string name="pref_directory">DEF_FOLDER</string>
    <string name="pref_folder_count" translatable="false">pref_folder_count</string>

    <string name="preferences_category_main">Main settings</string>
    <string name="preferences_directory_title">Set default directory</string>
    <string name="preferences_folder_count">Show folder items count</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to write is required to show and modify files.</string>
    <string name="write_permission_denied">This app requires write permission to work with files. Please try again and grant access to write access.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Simple File Manager\'.</string>
    <string name="permission_required_toast">Write permission is required for this app.</string>
    <string name="action_share">Share</string>
    <string name="action_details">Details</string>


    <string name="file_name">Name:</string>
    <string name="file_type">Type:</string>
    <string name="file_path">Path:</string>
    <string name="file_size">Size:</string>
    <string name="multiple_files">Multiple files</string>
    <string name="folder">Folder</string>
    <string name="file">File</string>
    <string name="ok">@android:string/ok</string>
    <string name="share_via">Share via</string>


</resources>
