<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preferences_category_main">

        <com.github.devjn.simplefilemanager.utils.DirectoryPreferences
            style="@style/AppPreference.DialogPreference"
            android:key="@string/pref_directory"
            android:summary="@string/preferences_directory_title"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_folder_count"
            android:summary="@string/preferences_folder_count"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_hidden_shown"
            android:summary="@string/preferences_hidden_shown"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>