<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="200"
        android:title="@string/action_delete"
        android:titleCondensed="Delete"
        app:showAsAction="ifRoom|withText">
    </item>

    <item
        android:id="@+id/action_details"
        android:orderInCategory="300"
        android:title="@string/action_details"
        app:showAsAction="never">
    </item>
</menu>